--- a/dumbhippo/trunk/super/base.conf
+++ b/dumbhippo/trunk/super/base.conf
@@ -44,8 +44,13 @@
 	<!-- The log level for the root logger (anything not covered by a more specific logger)-->
 	<parameter name="rootLogLevel">INFO</parameter>
 
+	<parameter name="jbossdir">/opt/jboss</parameter>
 	<!-- note, default is 3873 -->
 	<parameter name="jbossInvokerLocatorPort">$((baseport+50))</parameter>
+    <parameter name="twiddle">JAVA_OPTS=-Dorg.jboss.logging.Logger.pluginClass=org.jboss.logging.NullLoggerPlugin $jbossdir/bin/twiddle.sh -s jnp://localhost:$jnpPort</parameter> 
+
+	<parameter name="jnpPort">$((baseport+10))</parameter>
+
 
 	<parameter name="basedir">$home/dhdeploy</parameter>
 	<parameter name="baseport">21000</parameter>
@@ -90,8 +95,6 @@
 
 	<!-- for 'super watch' we sometimes want to play sounds -->
 	<parameter name="playSoundCommand">/usr/bin/play %s</parameter>
-
-	<parameter name="jnpPort">$((baseport+10))</parameter>
 
 	<parameter name="jiveHost">127.0.0.1</parameter>
 	<parameter name="jivePlainPort">$((baseport+20))</parameter>	
@@ -167,7 +170,6 @@
 		<requiredService service="mysql"/> <!-- or -->
 		<requiredService service="pgsql"/>
 
-		<parameter name="jbossdir">/opt/jboss</parameter>
 		<parameter name="targetdir">$basedir/jboss</parameter>
 		<parameter name="filesavedir">$targetdir/data/files</parameter>
 
@@ -255,6 +257,8 @@
 			   exclude="$superdir/jive/jive.exclude"/>
 		<merge src="$superdir/jive/files"
 			   expand="yes"/>
+		<merge src="$jivedir/lib/wildfire.jar"
+			   dest="deploy/wildfire.sar/wildfire.jar"/>
 		<merge src="$jivedir/plugins/hippo.jar"
 			   dest="plugins/hippo.jar"/>
 
