Move build directory down a level so that you can have multiple branches in the same workspace

--- a/dumbhippo/branches/cluster/super/jboss/files/deploy/ejb3.deployer/META-INF/persistence.properties
+++ b/dumbhippo/branches/cluster/super/jboss/files/deploy/ejb3.deployer/META-INF/persistence.properties
@@ -6,8 +6,11 @@ hibernate.query.factory_class=org.hibernate.hql.ast.ASTQueryTranslatorFactory
 hibernate.hbm2ddl.auto=create-drop
 #hibernate.hbm2ddl.auto=create
 #hibernate.cache.provider_class=org.hibernate.cache.HashtableCacheProvider
- Clustered cache with TreeCache
+# Clustered cache with TreeCache
 hibernate.cache.provider_class=org.jboss.ejb3.entity.TreeCacheProviderHook
+# This would be for using optimistic node locking in the TreeCache. It doesn't 
+# really work, however
+#hibernate.cache.provider_class=com.dumbhippo.persistence.OptimisticTreeCacheProviderHook
 hibernate.treecache.mbean.object_name=jboss.cache:service=EJB3EntityTreeCache
 hibernate.connection.datasource=java:/DefaultDS
 hibernate.jndi.java.naming.factory.initial=org.jnp.interfaces.NamingContextFactory
