--- a/dumbhippo/branches/cluster/super/base.conf
+++ b/dumbhippo/branches/cluster/super/base.conf
@@ -227,6 +227,12 @@
              hibernate-annotations.jar depends on it -->
 		<merge src="$svndir/server/lib/lucene-core-1.9.1.jar"
 			   dest="lib/lucene-core-1.9.1.jar"/>
+		<merge src="$svndir/server/lib/jboss-cache.jar"
+			   dest="lib/jboss-cache.jar"/>
+		<merge src="$svndir/server/lib/hibernate3.jar"
+			   dest="lib/hibernate3.jar"/>
+		<merge src="$svndir/server/lib/hibernate-annotations.jar"
+			   dest="lib/hibernate-annotations.jar"/>
 		<merge src="$svndir/server/target/deploy/dumbhippo.ear"
 			   dest="deploy/dumbhippo.ear"
 			   hot="yes"/>
