--- a/dumbhippo/branches/cluster/super/base.conf
+++ b/dumbhippo/branches/cluster/super/base.conf
@@ -49,6 +49,7 @@
 
 	<parameter name="jbossdir">/opt/jboss</parameter>
 
+        <parameter name="clusterHosts"></parameter>
 	<parameter name="bindHost">127.0.0.1</parameter>
 	<!-- Multicast group for this cluster. 228.1.2.3 corresponds to the JBoss default,
          but if you are picking one for yourself, AFAIK you should pick from
@@ -338,4 +339,17 @@
 
 		<parameter name="consoleCommand">$targetdir/scripts/hungry-console.sh</parameter>
 	</service>
+
+        <service name="balancer">
+		<parameter name="targetdir">$basedir/balancer</parameter>
+		<parameter name="balancerdir">$svndir/cluster/target</parameter>
+		<merge src="$superdir/balancer/files"
+			   expand="yes"/>
+		<merge src="$balancerdir/classes/dumbhippo-xmpp-balancer.jar"
+			   dest="dumbhippo-xmpp-balancer.jar"/>
+                <merge src="$balancerdir/lib"
+                           dest="lib"/>
+		<targetAttributes pattern="/logs/*"	 ignore="yes" preserve="yes"/>
+		<targetAttributes pattern="/run/*"	ignore="yes"/>
+	</service> 
 </superconf>
