--- a/dumbhippo/branches/cluster/build.xml
+++ b/dumbhippo/branches/cluster/build.xml
@@ -10,7 +10,7 @@
         <ant dir="wildfire/" antfile="build/build.xml" target="plugins"/>    	
         <ant dir="imbot" target="all"/>
     	<ant dir="hungry" target="build"/>    	
-    	<ant dir="cluster" target="build"/>    	
+    	<ant dir="cluster" target="all"/>    	
     </target>
 
     <target name="dar" depends="compile">
