--- a/dumbhippo/branches/cluster/build.xml
+++ b/dumbhippo/branches/cluster/build.xml
@@ -14,7 +14,7 @@
     </target>
 
     <target name="dar" depends="compile">
-		<exec dir="${basedir}" executable="${basedir}/super/super">
+		<exec dir="${basedir}" executable="${basedir}/super/super" failonerror="true">
 			 <!-- this parameter doesn't matter; super barfs though if
 			      $HOME isn't set, which is true for the autobuilder. -->
 			<arg value="-Dhome=/enoent"/>
@@ -24,14 +24,14 @@
     </target>
 
     <target name="deploy" depends="dar">
-		<exec dir="${basedir}" executable="${basedir}/tools/deploy.sh">
+		<exec dir="${basedir}" executable="${basedir}/tools/deploy.sh" failonerror="true">
 			<arg value="super/dumbhippo.dar"/>
 			<arg value="${deploy.hosts}"/>
 		</exec>
     </target>
 
     <target name="deploy-stop">
-		<exec dir="${basedir}" executable="${basedir}/tools/deploy-stop.sh">
+		<exec dir="${basedir}" executable="${basedir}/tools/deploy-stop.sh" failonerror="true">
 			<arg value="${deploy.hosts}"/>
 		</exec>
     </target>
@@ -46,13 +46,13 @@
     <target name="cleandar" depends="clean,dar"/>
 
     <target name="reload" depends="compile">
-        <exec executable="super/super">
+        <exec executable="super/super" failonerror="true">
              <arg line="reload all"/>
         </exec>
     </target>
 
     <target name="restart" depends="compile">
-        <exec executable="super/super">
+        <exec executable="super/super" failonerror="true">
             <arg line="restart all"/>
         </exec>
     </target>
