Add new classes for making facebook web services requests, storing facebook account data for users. Allow users to log in to facebook on /account. Get message count for users with valid facebook sessions, stack how many unread messages the user has if they might have new messages. If the user's facebook session has expired, stack a block that offers them to re-login.

--- a/dumbhippo/trunk/super/base.conf
+++ b/dumbhippo/trunk/super/base.conf
@@ -120,6 +120,10 @@
 
 	<!-- flickr api id -->
 	<parameter name="flickrApiId"></parameter>
+	
+	<!-- Facebook api key and secret -->
+	<parameter name="facebookApiKey"></parameter>
+	<parameter name="facebookSecret"></parameter>
 
 	<service name="mysql" enabled="$mysqlEnabled">
 		<parameter name="targetdir">$mysqlTargetdir</parameter>
