Move balancer into its own subdir of cluster/.
Have balancer parse client XML before sending response
in order to work around loudmouth callback ordering
issues with closing the connection early.

Add support for binding balancer to a particular interface.

Fix missing script references in base.conf.

--- a/dumbhippo/branches/cluster/.classpath
+++ b/dumbhippo/branches/cluster/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="src" path="taste/src/main"/>
 	<classpathentry kind="src" path="imbot/src/java"/>
 	<classpathentry kind="src" path="hungry/src/test/java"/>
-	<classpathentry kind="src" path="cluster"/>
+	<classpathentry kind="src" path="cluster/balancer/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<accessrules>
 			<accessrule kind="accessible" pattern="**/awt/image/**"/>
@@ -14,7 +14,7 @@
 			<accessrule kind="accessible" pattern="**/awt/Rectangle"/>
 			<accessrule kind="accessible" pattern="**/awt/Image"/>
 			<accessrule kind="discouraged" pattern="**/awt/**"/>
-                        <accessrule kind="nonaccessible" pattern="**/awt/List"/>
+			<accessrule kind="nonaccessible" pattern="**/awt/List"/>
 		</accessrules>
 	</classpathentry>
 	<classpathentry sourcepath="ECLIPSE_HOME/plugins/org.eclipse.jdt.source_3.0.0/src/org.junit_3.8.1/junitsrc.zip" kind="var" path="JUNIT_HOME/junit.jar"/>
@@ -87,7 +87,7 @@
 	<classpathentry kind="var" path="JBOSS_HOME/server/default/deploy/ejb3.deployer/jboss-annotations-ejb3.jar"/>
 	<classpathentry kind="lib" path="/opt/jboss/server/all/lib/jboss-cache.jar"/>
 	<classpathentry kind="var" path="JBOSS_HOME/server/all/lib/jgroups.jar"/>
-        <classpathentry kind="lib" path="server/lib/commons-fileupload-1.1.1.jar"/>
-        <classpathentry kind="lib" path="server/lib/commons-io-1.2.jar"/>
+	<classpathentry kind="lib" path="server/lib/commons-fileupload-1.1.1.jar"/>
+	<classpathentry kind="lib" path="server/lib/commons-io-1.2.jar"/>
 	<classpathentry kind="output" path="eclipse-build"/>
 </classpath>
