--- a/dumbhippo/branches/cluster/super/base.conf
+++ b/dumbhippo/branches/cluster/super/base.conf
@@ -341,6 +341,7 @@
 	</service>
 
         <service name="balancer">
+		<parameter name="balancerBind"></parameter> <!-- bind to this interface, all if unset -->
 		<parameter name="targetdir">$basedir/balancer</parameter>
 		<parameter name="balancerdir">$svndir/cluster/target</parameter>
 		<merge src="$superdir/balancer/files"
@@ -351,5 +352,9 @@
                            dest="lib"/>
 		<targetAttributes pattern="/logs/*"	 ignore="yes" preserve="yes"/>
 		<targetAttributes pattern="/run/*"	ignore="yes"/>
+
+		<parameter name="startCommand">$targetdir/scripts/balancer-start.sh</parameter>
+		<parameter name="stopCommand">$targetdir/scripts/balancer-stop.sh</parameter>
+		<parameter name="statusCommand">$targetdir/scripts/balancer-running.sh</parameter>
 	</service> 
 </superconf>
