base.conf: Disable balancer service by default ... doesn't make sense for most devel environments. ejb3-entity-cache-service.xml: Update UseMarshalling => UseRegionBasedMarshalling attribute name now we are using JBossCache-1.4

--- a/dumbhippo/branches/cluster/super/base.conf
+++ b/dumbhippo/branches/cluster/super/base.conf
@@ -340,7 +340,7 @@
 		<parameter name="consoleCommand">$targetdir/scripts/hungry-console.sh</parameter>
 	</service>
 
-        <service name="balancer">
+    <service name="balancer" enabled="no">
 		<parameter name="balancerBind"></parameter> <!-- bind to this interface, all if unset -->
 		<parameter name="targetdir">$basedir/balancer</parameter>
 		<parameter name="balancerdir">$svndir/cluster/target</parameter>
