- make the base purple with white text - add gradient canvas item - make the web swarm blocks have an orange gradient, orange titlebar, white text - change resize grip to use gtk colors instead of red

--- a/dumbhippo/trunk/client/linux/Makefile-mugshot.am
+++ b/dumbhippo/trunk/client/linux/Makefile-mugshot.am
@@ -34,6 +34,8 @@ mugshot_SOURCES	=				\
 	src/hippo-canvas-entity-name.h		\
 	src/hippo-canvas-entity-photo.c		\
 	src/hippo-canvas-entity-photo.h		\
+	src/hippo-canvas-gradient.c		\
+	src/hippo-canvas-gradient.h		\
 	src/hippo-canvas-grip.c			\
 	src/hippo-canvas-grip.h			\
 	src/hippo-canvas-image.c		\
