--- a/dumbhippo/trunk/client/linux/Makefile-libhippo.am
+++ b/dumbhippo/trunk/client/linux/Makefile-libhippo.am
@@ -25,16 +25,46 @@ $(COMMON_MARSHAL_BODY): $(COMMON_MARSHAL_LIST)
 	(echo "#include \"hippo-common-marshal.h\""; $(GLIB_GENMARSHAL) --prefix=hippo_common_marshal $(COMMON_MARSHAL_LIST) --body) > $(COMMON_MARSHAL_BODY)
 
 LIBHIPPO_SOURCEFILES =						\
+	$(COMMONSRCDIR)/hippo/hippo-actions.c			\
+	$(COMMONSRCDIR)/hippo/hippo-actions.h			\
 	$(COMMONSRCDIR)/hippo/hippo-basics.c			\
 	$(COMMONSRCDIR)/hippo/hippo-basics.h			\
 	$(COMMONSRCDIR)/hippo/hippo-block.c			\
 	$(COMMONSRCDIR)/hippo/hippo-block.h			\
 	$(COMMONSRCDIR)/hippo/hippo-block-post.c		\
 	$(COMMONSRCDIR)/hippo/hippo-block-post.h		\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-base.c		\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-base.h		\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-block.c		\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-block.h		\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-block-post.c		\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-block-post.h		\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-box.c		\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-box.h		\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-context.c		\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-context.h		\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-entity-name.c	\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-entity-name.h	\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-entity-photo.c	\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-entity-photo.h	\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-gradient.c		\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-gradient.h		\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-grip.c		\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-grip.h		\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-image.c		\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-image.h		\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-item.c		\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-item.h		\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-link.c		\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-link.h		\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-stack.c		\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-stack.h		\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-text.c		\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-text.h		\
 	$(COMMONSRCDIR)/hippo/hippo-chat-room.c			\
 	$(COMMONSRCDIR)/hippo/hippo-chat-room.h			\
 	$(COMMONSRCDIR)/hippo/hippo-common.h			\
-        $(COMMONSRCDIR)/hippo/hippo-common-internal.h           \
+        $(COMMONSRCDIR)/hippo/hippo-common-internal.h		\
 	$(COMMONSRCDIR)/hippo/hippo-connection.c		\
 	$(COMMONSRCDIR)/hippo/hippo-connection.h		\
 	$(COMMONSRCDIR)/hippo/hippo-cookies.c			\
@@ -47,6 +77,10 @@ LIBHIPPO_SOURCEFILES =						\
 	$(COMMONSRCDIR)/hippo/hippo-entity-protected.h		\
 	$(COMMONSRCDIR)/hippo/hippo-endpoint-proxy.c		\
 	$(COMMONSRCDIR)/hippo/hippo-endpoint-proxy.h		\
+	$(COMMONSRCDIR)/hippo/hippo-image-cache.c		\
+	$(COMMONSRCDIR)/hippo/hippo-image-cache.h		\
+	$(COMMONSRCDIR)/hippo/hippo-object-cache.c		\
+	$(COMMONSRCDIR)/hippo/hippo-object-cache.h		\
 	$(COMMONSRCDIR)/hippo/hippo-myspace.c			\
 	$(COMMONSRCDIR)/hippo/hippo-myspace.h			\
 	$(COMMONSRCDIR)/hippo/hippo-person.c			\
@@ -54,7 +88,13 @@ LIBHIPPO_SOURCEFILES =						\
 	$(COMMONSRCDIR)/hippo/hippo-platform.c			\
 	$(COMMONSRCDIR)/hippo/hippo-platform.h			\
 	$(COMMONSRCDIR)/hippo/hippo-post.c			\
-	$(COMMONSRCDIR)/hippo/hippo-post.h
+	$(COMMONSRCDIR)/hippo/hippo-post.h			\
+	$(COMMONSRCDIR)/hippo/hippo-stack-manager.c		\
+	$(COMMONSRCDIR)/hippo/hippo-stack-manager.h		\
+	$(COMMONSRCDIR)/hippo/hippo-surface.c			\
+	$(COMMONSRCDIR)/hippo/hippo-surface.h			\
+	$(COMMONSRCDIR)/hippo/hippo-window.c			\
+	$(COMMONSRCDIR)/hippo/hippo-window.h
 
 LIBHIPPO_BUILT_SOURCEFILES =			\
 	$(COMMON_MARSHAL_HEADER)		\
