--- a/dumbhippo/trunk/client/windows/HippoCommon/HippoCommon.vcproj
+++ b/dumbhippo/trunk/client/windows/HippoCommon/HippoCommon.vcproj
@@ -19,7 +19,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories=".;../HippoUtil;../dependencies/glib/include/glib-2.0;../dependencies/glib/lib/glib-2.0/include;../loudmouth;../../common;../../common/loudmouth"
+				AdditionalIncludeDirectories=".;../HippoUtil;../dependencies/glib/include/glib-2.0;../dependencies/cairo/include/cairo;../dependencies/pango/include/pango-1.0;../dependencies/glib/lib/glib-2.0/include;../loudmouth;../../common;../../common/loudmouth"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;HIPPOCOMMON_EXPORTS"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
@@ -107,6 +107,12 @@
 			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm;asmx"
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}">
 			<File
+				RelativePath="..\..\common\hippo\hippo-actions.c">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-actions.h">
+			</File>
+			<File
 				RelativePath="..\..\common\hippo\hippo-basics.c">
 			</File>
 			<File
@@ -114,6 +120,90 @@
 			</File>
 			<File
 				RelativePath="..\..\common\hippo\hippo-block.c">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-canvas-base.c">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-canvas-base.h">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-canvas-block-post.c">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-canvas-block-post.h">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-canvas-block.c">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-canvas-block.h">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-canvas-box.c">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-canvas-box.h">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-canvas-context.c">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-canvas-context.h">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-canvas-entity-name.c">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-canvas-entity-name.h">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-canvas-entity-photo.c">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-canvas-entity-photo.h">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-canvas-gradient.c">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-canvas-gradient.h">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-canvas-grip.c">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-canvas-grip.h">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-canvas-image.c">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-canvas-image.h">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-canvas-item.c">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-canvas-item.h">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-canvas-link.c">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-canvas-link.h">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-canvas-stack.c">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-canvas-stack.h">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-canvas-text.c">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-canvas-text.h">
 			</File>
 			<File
 				RelativePath="..\..\common\hippo\hippo-chat-room.c">
@@ -148,7 +238,19 @@
 				RelativePath="..\..\common\hippo\hippo-entity.c">
 			</File>
 			<File
+				RelativePath="..\..\common\hippo\hippo-image-cache.c">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-image-cache.h">
+			</File>
+			<File
 				RelativePath="..\..\common\hippo\hippo-myspace.c">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-object-cache.c">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-object-cache.h">
 			</File>
 			<File
 				RelativePath="..\..\common\hippo\hippo-person.c">
@@ -158,6 +260,24 @@
 			</File>
 			<File
 				RelativePath="..\..\common\hippo\hippo-post.c">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-stack-manager.c">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-stack-manager.h">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-surface.c">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-surface.h">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-window.c">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-window.h">
 			</File>
 		</Filter>
 		<Filter
