set hibernate.cache.use_minimal_puts=true; should greatly reduce locking warnings

--- a/dumbhippo/branches/cluster/super/jboss/files/deploy/ejb3.deployer/META-INF/persistence.properties
+++ b/dumbhippo/branches/cluster/super/jboss/files/deploy/ejb3.deployer/META-INF/persistence.properties
@@ -6,6 +6,10 @@ hibernate.query.factory_class=org.hibernate.hql.ast.ASTQueryTranslatorFactory
 hibernate.hbm2ddl.auto=create-drop
 #hibernate.hbm2ddl.auto=create
 #hibernate.cache.provider_class=org.hibernate.cache.HashtableCacheProvider
+# Don't put data into the cache if it's already there. Putting existing data into the 
+# cache when there is no change is expensive in the clustered case and causes lock conflicts.
+# Should be the default but isn't (filed as http://jira.jboss.com/jira/browse/EJBTHREE-707).
+hibernate.cache.use_minimal_puts=true
 # Clustered cache with TreeCache
 hibernate.cache.provider_class=org.jboss.ejb3.entity.TreeCacheProviderHook
 # This would be for using optimistic node locking in the TreeCache. It doesn't 
