Remove XMPP_HOST in favor of using JBoss bind host.

--- a/dumbhippo/branches/cluster/super/hungry/files/conf/hungry.properties
+++ b/dumbhippo/branches/cluster/super/hungry/files/conf/hungry.properties
@@ -3,7 +3,6 @@ database.driver=com.mysql.jdbc.Driver
 database.user=root
 database.password=@@dbPassword@@
 baseurl=@@baseurl@@
-jive.host=@@jiveHost@@
+jive.host=@@bindHost@@
 jive.port=@@jivePlainPort@@
-
 
