Add base.conf option to enable JBossCache tracing

--- a/dumbhippo/branches/cluster/super/base.conf
+++ b/dumbhippo/branches/cluster/super/base.conf
@@ -44,6 +44,9 @@
 		(setting to anything but DEBUG basically disables noise.log) -->
 	<parameter name="noiseLogLevel">DEBUG</parameter>
 
+	<!-- If set, TRACE level debugging is enabled for JBossCache -->
+    <parameter name="jbossCacheTrace">no</parameter>
+
 	<!-- The log level for the root logger (anything not covered by a more specific logger)-->
 	<parameter name="rootLogLevel">INFO</parameter>
 
