Updates required for using the latest Hibernate/Lucene: * Upgrade Lucene to 2.0. * Update indexers to use new DirectoryProvider API. * Point classpath and build.xml at the newest jars.
Rework music IQ handler to invoke MessengerGlueBean
methods instead of talking to JBoss via JMS. Add a new
UserDetailChangedEvent JMS message which is sent
from those methods to notify other nodes and sections of
code about the change.

--- a/dumbhippo/branches/cluster/.classpath
+++ b/dumbhippo/branches/cluster/.classpath
@@ -33,8 +33,6 @@
 	<classpathentry kind="var" path="JBOSS_HOME/server/default/deploy/jboss-aop-jdk50.deployer/jboss-aop-jdk50.jar"/>
 	<classpathentry kind="var" path="JBOSS_HOME/server/default/deploy/jboss-aop-jdk50.deployer/jboss-aspect-library-jdk50.jar"/>
 	<classpathentry kind="var" path="JBOSS_HOME/client/activation.jar"/>
-	<classpathentry kind="var" path="JBOSS_HOME/server/default/lib/hibernate3.jar"/>
-	<classpathentry kind="var" path="JBOSS_HOME/server/default/lib/hibernate-annotations.jar"/>
 	<classpathentry kind="var" path="JBOSS_HOME/server/default/lib/ejb3-persistence.jar"/>
 	<classpathentry kind="var" path="JBOSS_HOME/server/default/lib/javax.servlet.jsp.jar"/>
 	<classpathentry kind="var" path="JBOSS_HOME/client/jbossall-client.jar"/>
@@ -71,7 +69,6 @@
 	<classpathentry kind="lib" path="wildfire/build/lib/merge/xpp3.jar"/>
 	<classpathentry kind="src" path="wildfire/src/plugins/hippo/src/java"/>
 	<classpathentry kind="lib" path="server/lib/slf4j-log4j12.jar"/>
-	<classpathentry kind="lib" path="server/lib/lucene-core-1.9.1.jar"/>
 	<classpathentry kind="lib" path="taste/taste.jar"/>
 	<classpathentry kind="lib" path="taste/lib/annotations.jar"/>
 	<classpathentry kind="src" path="server/tests"/>
@@ -89,5 +86,8 @@
 	<classpathentry kind="var" path="JBOSS_HOME/server/all/lib/jgroups.jar"/>
 	<classpathentry kind="lib" path="server/lib/commons-fileupload-1.1.1.jar"/>
 	<classpathentry kind="lib" path="server/lib/commons-io-1.2.jar"/>
+	<classpathentry kind="lib" path="server/lib/lucene-core-2.0.0.jar"/>
+	<classpathentry kind="lib" path="server/lib/hibernate3.jar"/>
+	<classpathentry kind="lib" path="server/lib/hibernate-annotations.jar"/>
 	<classpathentry kind="output" path="eclipse-build"/>
 </classpath>
