Copy over all the new libs in Makefile Get a HippoWindow onscreen on Windows, though it is just empty right now

--- a/dumbhippo/trunk/client/windows/dependencies/Makefile
+++ b/dumbhippo/trunk/client/windows/dependencies/Makefile
@@ -6,6 +6,12 @@ all:
 	copy libglib-2.0-0.dll $(OUTDIR)
 	copy libgthread-2.0-0.dll $(OUTDIR)
 	copy libgobject-2.0-0.dll $(OUTDIR)
+	copy libgmodule-2.0-0.dll $(OUTDIR)
+	copy libpango-1.0-0.dll $(OUTDIR)
+	copy libpangocairo-1.0-0.dll $(OUTDIR)
+	copy libpangowin32-1.0-0.dll $(OUTDIR)
+	copy libcairo-2.dll $(OUTDIR)
+	copy libpng13.dll $(OUTDIR)
 
 clean:
 	del $(OUTDIR)\charset.dll
@@ -14,5 +20,11 @@ clean:
 	del $(OUTDIR)\libglib-2.0-0.dll
 	del $(OUTDIR)\libgthread-2.0-0.dll
 	del $(OUTDIR)\libgobject-2.0-0.dll
+	del $(OUTDIR)\libgmodule-2.0-0.dll
+	del $(OUTDIR)\libpango-1.0-0.dll
+	del $(OUTDIR)\libpangocairo-1.0-0.dll
+	del $(OUTDIR)\libpangowin32-1.0-0.dll
+	del $(OUTDIR)\libcairo-2.dll
+	del $(OUTDIR)\libpng13.dll
 
 
