Virtualize more ports.

--- a/dumbhippo/branches/cluster/super/base.conf
+++ b/dumbhippo/branches/cluster/super/base.conf
@@ -200,6 +200,9 @@
         <parameter name="jbossInvokerLocatorPort">$((baseport+19))</parameter>
      	<parameter name="presenceMcastPort">$((baseport+50))</parameter>
      	<parameter name="jnpDiscoveryPort">$((baseport+51))</parameter>
+        <parameter name="haRmiObjectPort">$((baseport+52))</parameter>
+        <parameter name="haInvokerPort">$((baseport+53))</parameter>
+        <parameter name="uil2MQPort">$((baseport+54))</parameter>
 
 		<!-- How often to run the pass through all LiveUser objects and update their
              hotness, live posts, and so forth, in seconds -->
