--- a/dumbhippo/trunk/client/windows/HippoUtil/HippoUtil.vcproj
+++ b/dumbhippo/trunk/client/windows/HippoUtil/HippoUtil.vcproj
@@ -23,7 +23,7 @@
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;BUILDING_HIPPO_UTIL;NOMINMAX"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
-				RuntimeLibrary="5"
+				RuntimeLibrary="1"
 				TreatWChar_tAsBuiltInType="TRUE"
 				ForceConformanceInForLoopScope="TRUE"
 				UsePrecompiledHeader="3"
@@ -37,6 +37,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				RegisterOutput="TRUE"
+				AdditionalOptions="/VERBOSE:LIB"
 				AdditionalDependencies="wininet.lib advapi32.lib"
 				OutputFile="$(OutDir)/HippoUtil.dll"
 				LinkIncremental="2"
