--- a/dumbhippo/trunk/client/windows/TestLoudmouth/TestLoudmouth.vcproj
+++ b/dumbhippo/trunk/client/windows/TestLoudmouth/TestLoudmouth.vcproj
@@ -23,7 +23,7 @@
 				PreprocessorDefinitions="__WIN32__;WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
-				RuntimeLibrary="5"
+				RuntimeLibrary="1"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="TRUE"
@@ -32,6 +32,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalOptions="/VERBOSE:LIB"
 				AdditionalDependencies="glib-2.0.lib intl.lib ws2_32.lib"
 				OutputFile="$(OutDir)/test-lm.exe"
 				LinkIncremental="2"
