--- a/dumbhippo/trunk/client/windows/loudmouth/loudmouth.vcproj
+++ b/dumbhippo/trunk/client/windows/loudmouth/loudmouth.vcproj
@@ -32,6 +32,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalOptions="/VERBOSE:LIB"
 				AdditionalDependencies="intl.lib glib-2.0.lib ws2_32.lib"
 				OutputFile="$(OutDir)/loudmouth-1.dll"
 				LinkIncremental="2"
