--- a/dumbhippo/trunk/client/linux/Makefile-mugshot.am
+++ b/dumbhippo/trunk/client/linux/Makefile-mugshot.am
@@ -14,6 +14,7 @@ mugshot_SOURCES	=				\
 	src/hippo-canvas.h			\
 	src/hippo-canvas-widget.c		\
 	src/hippo-canvas-widget.h		\
+	src/hippo-canvas-widgets.c		\
 	src/hippo-chat-window.c		    	\
 	src/hippo-chat-window.h		    	\
 	src/hippo-cookies-linux.c		\
