Support for conditionally tracing cluster bits.

--- a/dumbhippo/branches/cluster/super/base.conf
+++ b/dumbhippo/branches/cluster/super/base.conf
@@ -47,6 +47,8 @@
 	<!-- If set, TRACE level debugging is enabled for JBossCache -->
     <parameter name="jbossCacheTrace">no</parameter>
 
+    <parameter name="jbossClusterTrace">no</parameter>
+
 	<!-- The log level for the root logger (anything not covered by a more specific logger)-->
 	<parameter name="rootLogLevel">INFO</parameter>
 
