--- a/dumbhippo/branches/cluster/super/base.conf
+++ b/dumbhippo/branches/cluster/super/base.conf
@@ -74,6 +74,7 @@
 	
 	<parameter name="dbPassword">MangoChutney</parameter>
 
+	<parameter name="mysqlHost">$bindHost</parameter>
 	<parameter name="mysqlPort">$((baseport+0))</parameter>
 	<parameter name="mysqlEnabled">yes</parameter>
 	<parameter name="mysqlTargetdir">$basedir/mysql</parameter>
