--- a/dumbhippo/branches/cluster/super/hungry/files/conf/hungry.properties
+++ b/dumbhippo/branches/cluster/super/hungry/files/conf/hungry.properties
@@ -1,4 +1,4 @@
-database.url=jdbc:mysql://localhost:@@mysqlPort@@/dumbhippo
+database.url=jdbc:mysql://@@mysqlHost@@:@@mysqlPort@@/dumbhippo
 database.driver=com.mysql.jdbc.Driver
 database.user=root
 database.password=@@dbPassword@@
