Add support for extended versioning of web files; in particular to support jsp3/, images3/, etc.
The default version remains 2 for now; it can be configured by setting the webVersion super parameter.

--- a/dumbhippo/trunk/server/build.xml
+++ b/dumbhippo/trunk/server/build.xml
@@ -194,6 +194,7 @@
 			<fileset id="tag-files" dir="${web}/tags">
 				<include name="*.tag"/>
 				<include name="2/*.tag"/>
+				<include name="3/*.tag"/>				
 			</fileset>			
 		</copy>
 		<mkdir dir="${build.deploy.war}/WEB-INF/lib"/>
