--- a/dumbhippo/trunk/super/base.conf
+++ b/dumbhippo/trunk/super/base.conf
@@ -19,6 +19,8 @@
 	<!-- Whether or not to enable the "admin" web page -->
 	<parameter name="adminConsole">false</parameter>
 
+	<parameter name="webVersion">2</parameter>
+
 	<!-- Whether or not we have new feature descriptions on the features page -->
 	<parameter name="newFeatures">false</parameter>
 	
