Configure tomcat for session affinity suppor

--- a/dumbhippo/branches/cluster/super/base.conf
+++ b/dumbhippo/branches/cluster/super/base.conf
@@ -4,6 +4,11 @@
 		 this in your ~/.super.conf -->
 	<parameter name="serverHost">localhost.localdomain</parameter>
 
+	<!-- A short name for this node; used for the tomcat jvmRoute. Must be
+         unique within the cluster and match the identifier used in 
+         worker.properties -->
+    <parameter name="nodeName">localhost</parameter>
+
 	<!-- Whether or not this instance runs as a JBoss cluster "slave" node -->
 	<parameter name="slaveMode">no</parameter>
 
@@ -54,7 +59,7 @@
 
 	<parameter name="jbossdir">/opt/jboss</parameter>
 
-        <parameter name="clusterHosts"></parameter>
+    <parameter name="clusterHosts"></parameter>
 	<parameter name="bindHost">127.0.0.1</parameter>
 	<!-- Multicast group for this cluster. 228.1.2.3 corresponds to the JBoss default,
          but if you are picking one for yourself, AFAIK you should pick from
