- Make the lucene index location configurable - Minor code refactoring to reduce duplication between index types. - Deal with different casing of entity property => field mapping of more recent hibernate-annotations - Log exceptions thrown while indexing - Fix spurious include of search-positions.css

--- a/dumbhippo/branches/cluster/super/base.conf
+++ b/dumbhippo/branches/cluster/super/base.conf
@@ -192,6 +192,7 @@
 		<parameter name="jbossdir">/opt/jboss</parameter>
 		<parameter name="targetdir">$basedir/jboss</parameter>
 		<parameter name="filesavedir">$targetdir/data/files</parameter>
+		<parameter name="luceneIndexDir">$targetdir/data/index</parameter>
 
 		<parameter name="jbossClusterEnabled">no</parameter>
 		<parameter name="jbossPartition">default</parameter>
