--- a/dumbhippo/branches/cluster/server/build.xml
+++ b/dumbhippo/branches/cluster/server/build.xml
@@ -139,6 +139,7 @@
 				<include name="**/services/*.class" />
 				<include name="**/dav/*.class" />
 				<include name="**/storage/*.class" />
+				<include name="**/search/*.class" />
 				<include name="**/server/**/*.class" />
 				<include name="**/server/**/*.properties" />
 				<include name="**/statistics/**/*.class" />
