Make the default value of mysqlHost localhost, not  ...  doesn't work out of the box with our MySQL permissions for the single-machine cluster case and is wrong for the multi-machine cluster case

--- a/dumbhippo/branches/cluster/super/base.conf
+++ b/dumbhippo/branches/cluster/super/base.conf
@@ -79,7 +79,7 @@
 	
 	<parameter name="dbPassword">MangoChutney</parameter>
 
-	<parameter name="mysqlHost">$bindHost</parameter>
+	<parameter name="mysqlHost">127.0.0.1</parameter>
 	<parameter name="mysqlPort">$((baseport+0))</parameter>
 	<parameter name="mysqlEnabled">yes</parameter>
 	<parameter name="mysqlTargetdir">$basedir/mysql</parameter>
