persistence.properties TreeCacheProviderHook.java TreeCache.java: Use a copy   of the Hibernate TreeCache glue object, so that we can add a workaround   for JBCACHE-785 which was resulting in write locks being held too long. jboss-cache.jar: Include a patch for JBCACHE-786, suppressing spurious   warnings when replication of putFailFast encounters a conflicting lock. .classpath: Compile against our custom jboss-cache.jar, not the copy   included with JBoss.

--- a/dumbhippo/branches/cluster/super/jboss/files/deploy/ejb3.deployer/META-INF/persistence.properties
+++ b/dumbhippo/branches/cluster/super/jboss/files/deploy/ejb3.deployer/META-INF/persistence.properties
@@ -10,8 +10,11 @@ hibernate.hbm2ddl.auto=create-drop
 # cache when there is no change is expensive in the clustered case and causes lock conflicts.
 # Should be the default but isn't (filed as http://jira.jboss.com/jira/browse/EJBTHREE-707).
 hibernate.cache.use_minimal_puts=true
-# Clustered cache with TreeCache
-hibernate.cache.provider_class=org.jboss.ejb3.entity.TreeCacheProviderHook
+# Clustered cache with using the JBoss tree cache; we use a custom Provider to get a slightly 
+# patched version of the hibernate tree cache glue to workaround 
+# http://jira.jboss.com/jira/browse/JBCACHE-785
+# hibernate.cache.provider_class=org.jboss.ejb3.entity.TreeCacheProviderHook
+hibernate.cache.provider_class=com.dumbhippo.persistence.TreeCacheProviderHook
 # This would be for using optimistic node locking in the TreeCache. It doesn't 
 # really work, however
 #hibernate.cache.provider_class=com.dumbhippo.persistence.OptimisticTreeCacheProviderHook
