--- a/dumbhippo/branches/cluster/.classpath
+++ b/dumbhippo/branches/cluster/.classpath
@@ -82,12 +82,12 @@
 	<classpathentry kind="lib" path="server/lib/jdom-1.0.jar"/>
 	<classpathentry kind="var" path="JBOSS_HOME/client/javax.servlet.jar"/>
 	<classpathentry kind="var" path="JBOSS_HOME/server/default/deploy/ejb3.deployer/jboss-annotations-ejb3.jar"/>
-	<classpathentry kind="lib" path="/opt/jboss/server/all/lib/jboss-cache.jar"/>
 	<classpathentry kind="var" path="JBOSS_HOME/server/all/lib/jgroups.jar"/>
 	<classpathentry kind="lib" path="server/lib/commons-fileupload-1.1.1.jar"/>
 	<classpathentry kind="lib" path="server/lib/commons-io-1.2.jar"/>
 	<classpathentry kind="lib" path="server/lib/lucene-core-2.0.0.jar"/>
 	<classpathentry kind="lib" path="server/lib/hibernate3.jar"/>
 	<classpathentry kind="lib" path="server/lib/hibernate-annotations.jar"/>
+	<classpathentry kind="lib" path="server/lib/jboss-cache.jar"/>
 	<classpathentry kind="output" path="eclipse-build"/>
 </classpath>
