base.conf cluster-service.xml ejb3-entity-cache-service.xml: Virtualize the two remaining   non-virtualized multicast ports.
LiveState.java PresenceService.java: Change "available users" to be locally available
  users instead of on the whole cluster.

--- a/dumbhippo/branches/cluster/super/base.conf
+++ b/dumbhippo/branches/cluster/super/base.conf
@@ -212,6 +212,8 @@
         <parameter name="haRmiObjectPort">$((baseport+52))</parameter>
         <parameter name="haInvokerPort">$((baseport+53))</parameter>
         <parameter name="uil2MQPort">$((baseport+54))</parameter>
+	    <parameter name="entityCacheMcastPort">$((baseport+55))</parameter>
+	    <parameter name="clusterServiceMcastPort">$((baseport+56))</parameter>
 
 		<!-- How often to run the pass through all LiveUser objects and update their
              hotness, live posts, and so forth, in seconds -->
